# go-resharp

./: .gitignore  README.md  dfa.go  dfa_bench_test.go  dfa_literal_prefix_test.go  dfa_re2_flavor_test.go  go.mod  go.sum
cmd/go-resharp-dump/: main.go
compiler/: compile.go  compile_test.go  pattern.go
compiler/internal/wasm/: dfa_export.wasm
internal/exporter/: Cargo.toml
internal/exporter/src/: lib.rs
internal/exporter/src/flavors/: mod.rs  re2.rs  translate.rs
scripts/: build_wasm.sh
